projects/bot_eval_run/run_1770631689260/iterations/01/cmd_node_--test_tests_oracle.test.js.stdout.txt
✖ GET /health + GET /openapi.json (2.9909ms)
✖ Todo CRUD + persistence (0.879ms)
ℹ tests 2
ℹ suites 0
ℹ pass 0
ℹ fail 2
ℹ cancelled 0
ℹ skipped 0
ℹ todo 0
ℹ duration_ms 57.4808

✖ failing tests:

test at tests\oracle.test.js:39:1
✖ GET /health + GET /openapi.json (2.9909ms)
  C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770631689260\workspace\src\server.js:85
      }
      ^
  
  SyntaxError: missing ) after argument list
      at wrapSafe (node:internal/modules/cjs/loader:1692:18)
      at Module._compile (node:internal/modules/cjs/loader:1735:20)
      at Object..js (node:internal/modules/cjs/loader:1893:10)
      at Module.load (node:internal/modules/cjs/loader:1481:32)
      at Module._load (node:internal/modules/cjs/loader:1300:12)
      at TracingChannel.traceSync (node:diagnostics_channel:328:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
      at Module.require (node:internal/modules/cjs/loader:1504:12)
      at require (node:internal/modules/helpers:152:16)
      at startServer (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770631689260\workspace\tests\oracle.test.js:13:15)

test at tests\oracle.test.js:59:1
✖ Todo CRUD + persistence (0.879ms)
  C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770631689260\workspace\src\server.js:85
      }
      ^
  
  SyntaxError: missing ) after argument list
      at wrapSafe (node:internal/modules/cjs/loader:1692:18)
      at Module._compile (node:internal/modules/cjs/loader:1735:20)
      at Object..js (node:internal/modules/cjs/loader:1893:10)
      at Module.load (node:internal/modules/cjs/loader:1481:32)
      at Module._load (node:internal/modules/cjs/loader:1300:12)
      at TracingChannel.traceSync (node:diagnostics_channel:328:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
      at Module.require (node:internal/modules/cjs/loader:1504:12)
      at require (node:internal/modules/helpers:152:16)
      at startServer (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770631689260\workspace\tests\oracle.test.js:13:15)
